# solforge

./: .gitignore  LICENSE  README.md  package-lock.json
UI/: Dockerfile
UI/solsmith/: package-lock.json  package.json  vite.config.ts
UI/solsmith/src/: App.tsx  index.css  main.tsx
UI/solsmith/src/screens/: dashboard.tsx  home.tsx
autopilot-agent/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
autopilot-agent/src/autopilot/: main.py
frontend/solsmith/: package-lock.json  package.json
main/autopilot/: pyproject.toml
main/autopilot/src/self_driver_agent/api/: main.py
main/self_driver_agent/: pyproject.toml
solsmith-agent/: Dockerfile  docker-compose.yml  pyproject.toml
