[tool.poetry]
name = "autopilot"
version = "0.1.0"
description = ""
authors = ["aruyaohi <omariontechnologies@gmail.com>"]
packages = [{ include = "autopilot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langgraph = "0.4.8"
langchain = "0.3.25"
langchain-openai = "0.3.24"
openai = ">=1.86.0,<2.0.0"
python-dotenv = "1.1.0"
waymo-waymax = { git = "https://github.com/waymo-research/waymax.git", branch = "main" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
