[project]
name = "self-driver-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "aruyaohi",email = "omariontechnologies@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "huggingface-hub (>=0.33.0,<0.34.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "self_driver_agent", from = "src"}]


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
